--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-DB_USER=YOUR_DB_USER
-DB_PASSWORD=YOUR_DB_PASSWORD
-DB_HOST=YOUR_DB_HOST
-DB_PORT=YOUR_DB_PORT
-DB_NAME=YOUR_DB_NAME
-DB_DRIVER=YOUR_DB_DRIVER
+DB_USER=root
+DB_PASSWORD=password
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=events-go
+DB_DRIVER=postgres
 
-JWT_SECRET=YOUR_JWT_SECRET
+JWT_SECRET=mysecret
 
-PORT=YOUR_PORT
+PORT=8080
